Fix test cases